# Component-Game-Engine

./: .gitignore  CMakeLists.txt  README.md  README.txt
EngineAssets/: controls.ini  game.ini
EngineAssets/shaders/: collisionWireframe.pix  collisionWireframe.vrt  shader.pix  shader.vrt
Game/include/: Application.h  Defines.h
Game/src/: Application.cpp  Main.cpp
GameEngine/include/: BoxCollider.h  Camera.h  CollisionShape.h  Components.h  Configurations.h  DebugBTDraw.h  GameObject.h  InputManager.h  Light.h  Log.h  MeshRenderer.h  Program.h  RigidBody.h  Shaders.h  SphereCollider.h  Transform.h
GameEngine/src/: BoxCollider.cpp  Camera.cpp  CollisionShape.cpp  Components.cpp  Configurations.cpp  DebugBTDraw.cpp  GameObject.cpp  InputManager.cpp  Light.cpp  Log.cpp  MeshRenderer.cpp  Program.cpp  RigidBody.cpp  Shaders.cpp  SphereCollider.cpp  Transform.cpp
GameEngineCore/include/: AABB.h  OBB.h  ObjObject.h  ObjParser.h  Texture.h  Timer.h  VertexBuffer.h  Window.h  glFunctions.h
GameEngineCore/src/: AABB.cpp  ObjObject.cpp  ObjParser.cpp  Texture.cpp  Timer.cpp  VertexBuffer.cpp  Window.cpp
ShaderBinaryTool/: Main.cpp
